# fastapi_iol

./: .gitignore  .gitlab-ci.yml  alembic.ini  pyproject.toml  worker-start.sh
alembic/: env.py
alembic/versions/: 515a6ad2f07c_01.py  6f1ec96f8a95_03.py  975f772256e3_e_questo.py  97735f664422_prova.py  c746c11aaed1_00.py
app/: backend_pre_start.py  initial_data.py  main.py  prove.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: recipe.py
app/api/api_vp/: api.py
app/api/api_vp/endpoints/: istanze.py  login.py  recipe.py  richiedenti.py  users.py
app/core/: config.py  config_orig.py  security.py
app/crud/: __init__.py  base.py  crud_istanza.py  crud_plominodoc.py  crud_recipe.py  crud_soggetto.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/models/: __init__.py  istanza.py  item.py  plominodoc.py  recipe.py  soggetti.py  soggetto.py  soggetto_OLD.py  ubicazione.py  user.py
app/schemas/: __init__.py  istanza.py  plominodoc.py  recipe.py  richiedente.py  soggetto.py  user.py
